[tool.poetry]
name = "docker-tests-example"
version = "3.0.0"
description = ""
authors = ["Krzysztof Pawlik <krzysiek.pawlik@people.pl>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.4.0"
selenium = "4.10.0"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
isort = "5.12.0"
mypy = "1.4.1"
poethepoet = "0.21.0"
ruff = "0.0.277"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["F", "E", "N", "A", "C4", "ISC", "PT", "Q", "RET", "SLF", "ARG", "PTH", "RUF"]

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.isort]
line_length = 120
profile = "black"

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-v"

[tool.poe.tasks]
_format = [ { shell = "isort . && black ." } ]
_check = [ { shell = "isort --check . && black --check ." } ]
_lint = [ { shell = "ruff . && mypy ." } ]
format = [ "_format", "_lint" ]
check = [ "_check", "_lint" ]
